Fix docs and add get deployment info
